--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "browser-sync": "^2.24.4",
     "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "idb-keyval": "^3.1.0"
   }
 }
